CI: show build commands on terminal
test-builds.sh record output from the build in
bt<layer>.log and we are already collecting that.
Send output from the build also to standard output,
for more convenient reading in Github's 'actions'
interface

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -70,7 +70,7 @@ jobs:
       - name: Run test-builds
         id: test-builds
         run: |
-          ./test-builds.sh ${{ matrix.layer.name }}
+          ./test-builds.sh --verbose ${{ matrix.layer.name }}
 
       - name: Publish build logs
         if: success() || failure()
@@ -126,7 +126,7 @@ jobs:
           sed -i.bak 's@ltdl_ac_aux_dir=""@ltdl_ac_aux_dir="../build-aux"@' $editable || true
           diff -u $editable.bak $editable || true
 
-          ./test-builds.sh
+          ./test-builds.sh --verbose
 
       - name: Publish build logs
         if: success() || failure()
@@ -173,7 +173,7 @@ jobs:
 
           run: |
             export MAKE=gmake
-            ./test-builds.sh
+            ./test-builds.sh --verbose
 
       - name: Publish build logs
         if: success() || failure()
