--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -16,6 +16,7 @@ on:
     # test PRs targeting this branch code
     branches: [ "master" ]
 
+  # allows to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 concurrency:
