--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -14,6 +14,7 @@ on:
   push:
     branches: [ "auto" ]
 
+  # allows to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 concurrency:
