--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -16,6 +16,9 @@ on:
     # test PRs targeting this branch code
     branches: [ "master" ]
 
+  # allows to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 concurrency:
   # Cancel ongoing tests in case of push to the same PR or staging branch,
   # but let previous master commit tests complete.
