add githoub groups output

--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -145,7 +145,10 @@ jobs:
           key: ${{ matrix.os }}-${{ matrix.compiler.CC }}-${{ matrix.layer.nick }}
 
       - name: Run build on Linux
-        run: ./test-builds.sh --verbose ${{ matrix.layer.name }}
+        run: |
+          echo "::group:: output from ./test-builds.sh"
+          ./test-builds.sh --verbose ${{ matrix.layer.name }}
+          echo "::endgroup::"
 
       - name: Publish build logs
         if: success() || failure()
@@ -178,7 +181,10 @@ jobs:
         uses: github/codeql-action/init@v3
 
       - name: Build Squid
-        run: ./test-builds.sh --verbose layer-02-maximus
+        run: |
+          echo "::group:: output from ./test-builds.sh"
+          ./test-builds.sh --verbose ./test-suite/buildtests/layer-02-maximus.opts
+          echo "::endgroup::"
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
