move groups inside test-builds.sh

--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -145,10 +145,7 @@ jobs:
           key: ${{ matrix.os }}-${{ matrix.compiler.CC }}-${{ matrix.layer.nick }}
 
       - name: Run build on Linux
-        run: |
-          echo "::group::output"
-          ./test-builds.sh --verbose ${{ matrix.layer.name }}
-          echo "::endgroup::"
+        run: ./test-builds.sh --verbose ${{ matrix.layer.name }}
 
       - name: Publish build logs
         if: success() || failure()
@@ -181,10 +178,7 @@ jobs:
         uses: github/codeql-action/init@v3
 
       - name: Build Squid
-        run: |
-          echo "::group::output"
-          ./test-builds.sh --verbose ./test-suite/buildtests/layer-02-maximus.opts
-          echo "::endgroup::"
+        run: ./test-builds.sh --verbose ./test-suite/buildtests/layer-02-maximus.opts
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
