CI: show build commands on terminal (#1965)
test-builds.sh records build output in per-layer logs, and we are
already collecting those logs. Send build output to standard output as
well, to expose it in GitHub Actions user interface. This new detailed
output is enclosed in a "layer ... output" group to keep emphasizing
problematic output lines extracted by test-builds.sh.

Also enclose MacOS build setup output in a group, for similar reasons.

--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -72,8 +72,7 @@ jobs:
 
       - name: Run test-builds
         id: test-builds
-        run: |
-          ./test-builds.sh ${{ matrix.layer.name }}
+        run: ./test-builds.sh --verbose ${{ matrix.layer.name }}
 
       - name: Publish build logs
         if: success() || failure()
@@ -101,6 +100,7 @@ jobs:
       - name: Run test-builds
         id: test-builds
         run: |
+          echo "::group::setup output"
           eval `brew shellenv`
           PKG_CONFIG_PATH="$HOMEBREW_PREFIX/lib/pkgconfig"
           PKG_CONFIG_PATH="$PKG_CONFIG_PATH:$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig"
@@ -128,8 +128,9 @@ jobs:
           editable=$HOMEBREW_CELLAR/libtool/2.4.7/bin/glibtoolize
           sed -i.bak 's@ltdl_ac_aux_dir=""@ltdl_ac_aux_dir="../build-aux"@' $editable || true
           diff -u $editable.bak $editable || true
+          echo "::endgroup::"
 
-          ./test-builds.sh
+          ./test-builds.sh --verbose
 
       - name: Publish build logs
         if: success() || failure()
@@ -176,7 +177,7 @@ jobs:
 
           run: |
             export MAKE=gmake
-            ./test-builds.sh
+            ./test-builds.sh --verbose
 
       - name: Publish build logs
         if: success() || failure()
