--- a/.github/workflows/slow.yaml
+++ b/.github/workflows/slow.yaml
@@ -72,7 +72,8 @@ jobs:
 
       - name: Run test-builds
         id: test-builds
-        run: ./test-builds.sh --verbose ${{ matrix.layer.name }}
+        run: |
+          ./test-builds.sh ${{ matrix.layer.name }}
 
       - name: Publish build logs
         if: success() || failure()
@@ -100,7 +101,6 @@ jobs:
       - name: Run test-builds
         id: test-builds
         run: |
-          echo "::group::setup output"
           eval `brew shellenv`
           PKG_CONFIG_PATH="$HOMEBREW_PREFIX/lib/pkgconfig"
           PKG_CONFIG_PATH="$PKG_CONFIG_PATH:$HOMEBREW_PREFIX/opt/openldap/lib/pkgconfig"
@@ -128,9 +128,8 @@ jobs:
           editable=$HOMEBREW_CELLAR/libtool/2.4.7/bin/glibtoolize
           sed -i.bak 's@ltdl_ac_aux_dir=""@ltdl_ac_aux_dir="../build-aux"@' $editable || true
           diff -u $editable.bak $editable || true
-          echo "::endgroup::"
 
-          ./test-builds.sh --verbose
+          ./test-builds.sh
 
       - name: Publish build logs
         if: success() || failure()
@@ -177,7 +176,7 @@ jobs:
 
           run: |
             export MAKE=gmake
-            ./test-builds.sh --verbose
+            ./test-builds.sh
 
       - name: Publish build logs
         if: success() || failure()
