CI: be explicit when skipping unit tests
The Automake test framework uses a specific
return value from tests to signify they have
been skipped. Use it.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1018,8 +1018,8 @@ tests_testString_LDFLAGS = $(LIBADD_DL)
 
 ## Tests of fs/*
 
-if ENABLE_FS_ROCK
 check_PROGRAMS += tests/testRock
+if ENABLE_FS_ROCK
 tests_testRock_SOURCES = \
 	$(DELAY_POOL_SOURCE) \
 	$(UNLINKDSOURCE) \
@@ -1180,14 +1180,15 @@ tests_testRock_LDADD = \
 	$(XTRA_LIBS)
 tests_testRock_LDFLAGS = $(AM_CPPFLAGS) $(LIBADD_DL)
 else
+tests_testRock_SOURCES = tests/testSkipped.cc
 EXTRA_DIST += \
         tests/testRock.cc \
         tests/testStoreSupport.cc \
         tests/testStoreSupport.h
 endif
 
-if ENABLE_FS_UFS
 check_PROGRAMS += tests/testUfs
+if ENABLE_FS_UFS
 tests_testUfs_SOURCES = \
 	$(DELAY_POOL_SOURCE) \
 	$(UNLINKDSOURCE) \
@@ -1356,6 +1357,7 @@ tests_testUfs_LDADD = \
 	$(XTRA_LIBS)
 tests_testUfs_LDFLAGS = $(LIBADD_DL)
 else
+tests_testUfs_SOURCES = tests/testSkipped.cc
 EXTRA_DIST += \
 	tests/testUfs.cc
 endif
@@ -1696,8 +1698,8 @@ tests_testDiskIO_LDFLAGS = $(LIBADD_DL)
 
 ## Tests of auth/*
 
-if ENABLE_AUTH
 check_PROGRAMS += tests/testACLMaxUserIP
+if ENABLE_AUTH
 tests_testACLMaxUserIP_SOURCES = \
 	tests/testACLMaxUserIP.cc
 nodist_tests_testACLMaxUserIP_SOURCES = \
@@ -1743,6 +1745,7 @@ tests_testACLMaxUserIP_LDADD = \
 	$(XTRA_LIBS)
 tests_testACLMaxUserIP_LDFLAGS = $(LIBADD_DL)
 else
+tests_testACLMaxUserIP_SOURCES = tests/testSkipped.cc
 EXTRA_DIST += \
 	tests/testACLMaxUserIP.cc
 endif
