adopt release notes fix
Damn you muscle memory

Co-authored-by: Amos Jeffries <yadij@users.noreply.github.com>

--- a/doc/release-notes/release-8.sgml.in
+++ b/doc/release-notes/release-8.sgml.in
@@ -40,7 +40,7 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 	   currently on the market suports the LanManager protocol
 	   in their default configuration.
 	<p>Removed <em>ntlm_smb_lm_auth</em> NTLM authentication helper.
-	   Use the <em>html_auth</em> helper from the Samba project instead.
+	   Use the <em>ntlm_auth</em> helper from the Samba project instead.
 
 </descrip>
 
