--- a/doc/release-notes/release-7.sgml.in
+++ b/doc/release-notes/release-7.sgml.in
@@ -34,6 +34,7 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 	<item>Removed purge tool
 	<item>Remove deprecated languages
 	<item>Remove Ident protocol support
+	<item>Helper changes
 </itemize>
 
 <p>Most user-facing changes are reflected in squid.conf (see further below).
@@ -122,6 +123,13 @@ in the position of what used to be a %ui record field.
 
 <p>If necessary, an external ACL helper can be written to perform Ident transactions
 and deliver the user identity to Squid through the **user=** annotation.
+
+<sect1>Helper changes
+<p>Removed <em>basic_smb_lm_auth</em> NTLM authentication helper.
+   Use the <em>ntlm_auth</em> helper from the Samba project instead.
+
+<p>Removed <em>ntlm_smb_lm_auth</em> NTLM authentication helper.
+   Use the <em>ntlm_auth</em> helper from the Samba project instead.
 
 <sect>Changes to squid.conf since Squid-@SQUID_RELEASE_OLD@
 <p>
@@ -282,7 +290,14 @@ This section gives an account of those changes in three categories:
 <sect1>Changes to existing options<label id="modifiedoptions">
 <p>
 <descrip>
-	<p>No build options have changed behaviour in this version.
+
+	<tag>--enable-auth-basic=</tag>
+	<p>Removed <em>SMB_LM</em> helper, in favour of the <em>ntlm_auth</em>
+	   alternative offered by the Samba project.
+
+	<tag>--enable-auth-ntlm=</tag>
+	<p>Removed <em>SMB_LM</em> helper, in favour of the <em>ntlm_auth</em>
+	   alternative offered by the Samba project.
 
 </descrip>
 </p>
