Revert "Remove basic_smb_lm_auth helper (#2009)"
This reverts commit f53a024a40862965f8c68f9d0127c8fcb0bf3a00.

--- a/src/auth/basic/Makefile.am
+++ b/src/auth/basic/Makefile.am
@@ -19,6 +19,7 @@ DIST_SUBDIRS = \
         RADIUS \
         SASL \
         SMB \
+        SMB_LM \
         SSPI
 
 SUBDIRS = $(BASIC_AUTH_HELPERS)
