--- a/doc/release-notes/release-8.sgml.in
+++ b/doc/release-notes/release-8.sgml.in
@@ -39,6 +39,8 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 	<p>Removed <em>ext_lm_group_acl</em> external acl helper. No product
 	   currently on the market suports the LanManager protocol
 	   in their default configuration.
+	<p>Removed <em>ntlm_smb_lm_auth</em> NTLM authentication helper.
+	   Use the <em>ntlm_auth</em> helper from the Samba project instead.
 
 </descrip>
 
@@ -102,6 +104,10 @@ This section gives an account of those changes in three categories:
 	<tag>--enable-external-acl-helpers=</tag>
 	<p>Removed <em>LM_Group</em> helper. The LM protocol is
 	   insecure and no longer supported on the market since 2008.
+
+	<tag>--enable-auth-ntlm=</tag>
+	<p>Removed <em>SMB_LM</em> helper, in favour of the <em>ntlm_auth</em>
+	   alternative offered by the Samba project.
 
 </descrip>
 </p>
