--- a/src/auth/negotiate/SSPI/Makefile.am
+++ b/src/auth/negotiate/SSPI/Makefile.am
@@ -17,6 +17,7 @@ negotiate_sspi_auth_LDADD = \
 	$(top_builddir)/lib/sspi/libsspwin32.la \
 	$(top_builddir)/lib/libmiscencoding.la \
 	$(COMPAT_LIB) \
+	$(LIBNETTLE_LIBS) \
 	-ladvapi32 \
 	$(XTRA_LIBS)
 
