Reviewer requested revert

--- a/.github/workflows/quick.yaml
+++ b/.github/workflows/quick.yaml
@@ -49,7 +49,7 @@ jobs:
           sudo sed --in-place -E 's/# (deb-src.*updates main)/  \1/g' /etc/apt/sources.list
           sudo apt-get --quiet=2 update
           sudo apt-get --quiet=2 build-dep squid
-          sudo apt-get --quiet=2 install linuxdoc-tools libtool-bin pandoc
+          sudo apt-get --quiet=2 install libtool-bin
 
       - name: Setup a nodejs environment
         uses: actions/setup-node@v4
