MinGW: implement xaccept()
Windows' accept(2) has the same signature as
POSIX', but returns a SOCKET (under the hood, a
int *). This confuses error handling code
in squid, which uses POSIX return values
to detect error values.

Implement xaccept() to wrap around it, taking
the implementation from mswindows.h and using
it on MinGW as well.

Error highlighting the issue:
```
TcpAcceptor.cc: In member function
  'bool Comm::TcpAcceptor::acceptInto(Comm::ConnectionPointer&)':
TcpAcceptor.cc:352:17: error:
  comparison of unsigned expression in '< 0'
  is always false [-Werror=type-limits]
  352 |     if (rawSock < 0) {
```

--- a/compat/Makefile.am
+++ b/compat/Makefile.am
@@ -78,6 +78,8 @@ libcompatsquid_la_SOURCES = \
 	xalloc.cc \
 	xalloc.h \
 	xis.h \
+	xaccept.cc \
+	xaccept.h \
 	xstrerror.cc \
 	xstrerror.h \
 	xstring.cc \
